# ninja-payment-bot

./: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt  translations.json
bot/: config.py  db.py  payments.py  start.py  start_serverless.py
bot/models/: subscription.py
bot/utils/: localization.py
